<resources>
    <string name="app_name">Mu_SICK</string>
    <string name="songs">SONGS</string>
    <string name="no_songs_found">No Songs Found</string>
    <string name="music">Music</string>
    <string name="title_of_the_song">Title of the Song</string>
    <string name="_0_00">0.00</string>
    <string name="todo">TODO</string>
    <string name="loadimage">s\n</string>
    <string name="appName">Mu_SICK</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="click_to_register">Click to Register</string>
    <string name="register">Register</string>
    <string name="click_to_login">Click to Login</string>
    <string name="logout">Logout</string>
</resources>